fixed price not showing & make the grid cols 2 in the home page

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@
 @import "tailwindcss/theme.css" layer(theme);
 @import "tailwindcss/preflight.css" layer(base);
 @import "tailwindcss/utilities.css" layer(utilities);
+
+
+@theme {
+  --breakpoint-xs: 30rem;
+}
